# remote-copilot-bridge

./: .gitignore  README.md  audit_report.md  fix_history.py  package-lock.json  package.json  patch.py  patch_app.py  patch_audit.py  patch_audit2.py  patch_audit3.py  patch_billing.py  patch_chat_resize2.py  patch_chat_search.py  patch_dashboard.py  patch_dashboard_skeleton.py  patch_dashboard_skeleton2.py  patch_gh.py  patch_gh2.py  patch_gh3.py  patch_landing.py  patch_settings.py  patch_settings_team.py  patch_shortcuts.py  patch_team_ui.py  production_readiness_audit.md  run_migrations.js  vercel.json
.github/workflows/: ci.yml
agent/: README.md  patch_config.py  patch_dir2.py  patch_directive.py  patch_pyproject.py  patch_reconnect.py  patch_relay.py  patch_settings_gh_instructions.py  pyproject.toml  test_relay.py
agent/synapse_agent/: __init__.py  auth_server.py  bridge.py  cli.py  config.py  models.py  relay.py  tools.py
agent/tests/: test_bridge.py
demo/: synapse-demo.html
supabase/migrations/: 001_schema.sql  002_admin_functions.sql  002_features.sql  003_multiuse_pairing.sql  004_rate_limiting.sql  005_production_fixes.sql  006_security_hardening.sql  (+9 more)
web/: .env.example  fix_imports.py  fix_pair.py  fix_ts_errors.py  fix_ts_errors2.py  fix_ts_errors3.py  fix_ts_errors4.py  fix_ts_errors5.py  fix_ts_errors6.py  fix_ts_errors7.py  fix_ts_errors8.py  index.html  inject_state.py  inject_ui.py  package-lock.json  package.json  patch_web.py  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vercel.json  vite.config.ts  vitest.config.ts
(+47 files in other folders)
